syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message ContextDomainTransaction {
  Entity Entity = 1;
  string id_cognito = 2;
  string cognito_pool = 3;
}

message ContextDomainTransactionListRequest {
  ContextDomainTransaction payload = 1;
  Metadata metadata = 2;
}

message ContextDomainTransactionResponse {
  ContextDomainTransaction response = 1;
}

message ContextDomainTransactionListResponse {
  repeated ContextDomainTransaction response = 1;
}

service ContextDomainTransactionService {
  rpc Create(ContextDomainTransaction) returns (ContextDomainTransactionResponse);
  rpc Update(ContextDomainTransaction) returns (ContextDomainTransactionResponse);
  rpc FindAll(ContextDomainTransactionListRequest) returns (ContextDomainTransactionListResponse);
}
